Section numbers, misc

--- a/appetizers.tex
+++ b/appetizers.tex
@@ -65,8 +65,8 @@ Serves 4
 
 \begin{recipe}{Thai Watermelon and Crab}{\totaltime{10 min}}
 \begin{ingredients}
-2 lb watermelon, \hphantom{ } chopped
-2 ripe tomatoes, \hphantom{ } chopped
+2 lb watermelon, \ibreak chopped
+2 ripe tomatoes, \ibreak chopped
 1 clove garlic, minced
 2 tbsp lime juice
 1 tsp fish sauce
