--- a/components.tex
+++ b/components.tex
@@ -22,7 +22,7 @@ Serve in hot dogs, sandwiches, or as a side.
 
 \begin{recipe}{Fast Caramelized Onions}{\tag{VG}\totaltime{30 min}}
 \begin{ingredients}
-3 lb onions, sliced through root
+3 lb onions, sliced \ibreak through root
 3/4 cup water
 2 tbsp oil
 3/4 tsp kosher salt
