--- a/drinks.tex
+++ b/drinks.tex
@@ -2,7 +2,7 @@
 
 \begin{recipe}{Natasha}{\totaltime{5 min}}
 \begin{ingredients}
-3 cl seabuckthorn liquour
+3 cl seabuckthorn \ibreak liquour
 2 cl raspberry infused mezcal
 2 cl lemon juice
 2 cl pink peppercorn simple syrup
