--- a/joulu.tex
+++ b/joulu.tex
@@ -6,7 +6,7 @@
 70 g sugar
 350 ml whole milk
 240 ml heavy cream
-240 ml dark rum, brandy, or a mix
+240 ml dark rum, \ibreak brandy, or a mix
 freshly grated nutmeg, to garnish
 \end{ingredients}
 \nextcolumn
@@ -24,7 +24,7 @@ For more complexity, age in refrigerator for up to a year and blend with a fresh
 % To be seen if this is solid enough to withstand baking
 \begin{recipe}{Figgy Christmas Star Filling}{\tag{VG}\totaltime{30 min}}
 \begin{ingredients}
-200 g dried figs, roughly chopped
+200 g dried figs, \ibreak roughly chopped
 3 dl water
 1 dl sugar
 1 stick cinnamon
