--- a/meat_and_poultry_mains.tex
+++ b/meat_and_poultry_mains.tex
@@ -154,7 +154,7 @@ Serves 4
 1 tbsp sugar
 2 tsp kosher salt
 1/2 medium red onion, grated
-1 lb skirt steak, trimmed
+1 lb skirt steak, \ibreak trimmed
 \end{ingredients}
 \nextcolumn
 Serves 4
@@ -193,7 +193,7 @@ Serves 4
 
 \begin{denserecipe}{Roasted Beef Tenderloin}{\preheat{\celsius{230}}\totaltime{2 h}}
 \begin{ingredients}
-4 lb beef tenderloin, trimmed and tied
+4 lb beef tenderloin, \ibreak trimmed and tied
 2 tbsp unsalted butter, melted
 1 tbsp soy sauce
 2 tsp Worcestershire sauce
@@ -245,12 +245,12 @@ Serves 2
 
 \begin{denserecipe}{Oven-to-Pan Velvet Chicken}{\preheat{\celsius{135}}\totaltime{1 h 15 min}}
 \begin{ingredients}
-4 boneless, skinless chicken breasts
+4 boneless, skinless \ibreak chicken breasts
 2 tsp kosher salt
 2 tbsp butter, melted
 1 tbsp flour
 1 tsp cornstarch
-1/2 tsp ground black pepper
+1/2 tsp ground black \ibreak pepper
 1 tbsp vegetable oil
 \end{ingredients}
 \nextcolumn
@@ -263,6 +263,7 @@ Serves 4
     \item Brush with remaining batter, flip and cook over medium until \celsius{68}, 3 to 4 minutes more
     \item Rest 5 minutes before serving
 \end{steps}
+Serve with \reciperef{Warm Tomato Vinaigrette}.
 \end{denserecipe}
 
 \begin{recipe}{Chicken Miso Meatballs}{\preheat{\celsius{220}}\totaltime{20 min}}
@@ -331,7 +332,7 @@ Serves 4
 \end{steps}
 \end{recipe}
 
-\begin{denserecipe}{Sweet Hot Mustard Chicken Thighs}{\preheat{230C}\totaltime{5 hr}}
+\begin{denserecipe}{Mustard Chicken Thighs}{\preheat{230C}\totaltime{5 hr}}
 \begin{ingredients}
 8 skin-on chicken thighs
 1/2 cup dijon mustard
