--- a/patisserie.tex
+++ b/patisserie.tex
@@ -182,7 +182,7 @@ Serve with \reciperef{Blueberry Syrup}.
 
 \begin{recipe}{Lemon--Olive Oil Tart}{\tag{V}\preheat{\celsius{180}}\totaltime{1 h 15 min}}
 \begin{ingredients}
-1 \reciperef{Olive Oil Tart Shell}
+\reciperef{Olive Oil Tart Shell}
 1 cup sugar
 2 tbsp flour
 1/4 tsp salt
