--- a/pescatarian_mains.tex
+++ b/pescatarian_mains.tex
@@ -129,7 +129,7 @@ salt
 \end{paracol}
 \end{densecard}
 
-\begin{recipe}{Bay Scallops with Preserved Lemon}{\totaltime{20 min}}
+\begin{recipe}{Scallops with Preserved Lemon}{\totaltime{20 min}}
 \begin{ingredients}
 2 tbsp butter
 2 sprigs rosemary
@@ -152,7 +152,7 @@ Serves 2
 \end{steps}
 \end{recipe}
 
-\begin{denserecipe}{White Fish in Salty Tomato Sauce}{\totaltime{25 min}}
+\begin{denserecipe}{Fish in Salty Tomato Sauce}{\totaltime{25 min}}
 \begin{ingredients}
 4 (8-oz) white fish fillets (e.g., cod, halibut)
 kosher salt and pepper
@@ -213,12 +213,11 @@ pinch salt, white pepper
 3 tomatoes
 1 scallion, thinly sliced
 1 cup chicken stock
+1/2 tbsp cornstarch + 1 tbsp water
 1 pinch MSG
 1 tsp sesame oil
 1 tbsp ketchup
 1 tsp salt, 1/2 tsp sugar
-1/2 tbsp cornstarch
-1 tbsp water
 \end{ingredients}
 \nextcolumn
 Serves 2
@@ -227,7 +226,7 @@ Serves 2
     \item Peel tomatoes and cut into wedges
     \item Cook scallions on medium-high in 1 tbsp oil until barely golden
     \item Add tomatoes; cook until they start to soften
-    \item Add stock, deglaze, bring to boil
+    \item Add stock, bring to boil, thicken with slurry
     \item Add MSG, sesame oil, ketchup, salt and sugar
     \item Off heat pour egg on top as thin blanket
     \item Wait 1 minute; cook on medium-low until set
@@ -275,3 +274,25 @@ Garnish with scallion and serve with white rice.
 \end{ingredients}
 \end{paracol}
 \end{densecard}
+
+\begin{recipe}{Crispy Herbed Goat Cheese}{\preheat{\celsius{250}}\totaltime{1 h 20 min}}
+\begin{ingredients}
+200 g panko bread crumbs
+550 g goat cheese
+1 tsp oregano
+3-4 tbsp fresh chives
+4 tbsp fresh thyme
+1/2 tsp black pepper
+3 eggs
+1 tbsp dijon mustard
+\end{ingredients}
+\nextcolumn
+Serves 6
+\begin{steps}
+\item Process breadcrumbs until fine
+\item Mix goat cheese, herbs, and pepper
+\item Form into 12 pucks and freeze 20 minutes
+\item Dip pucks in beaten egg and dijon, coat with panko, and freeze 20 minutes more \\(or until later use)
+\item Bake 7-10 minutes at \celsius{250} \\(11 minutes if fully frozen)
+\end{steps}
+\end{recipe}
