--- a/porridges_and_grain_bowls.tex
+++ b/porridges_and_grain_bowls.tex
@@ -108,7 +108,7 @@ Serves 4
 1/2 tsp cumin seeds
 1 sprig curry leaves
 1 to 2 hot green chilies
-2 tbsp cilantro, chopped
+2 tbsp cilantro, \ibreak chopped
 1 tbsp lemon juice
 \end{ingredients}
 \nextcolumn
