--- a/salads_and_cold_preparations.tex
+++ b/salads_and_cold_preparations.tex
@@ -320,58 +320,19 @@ Serves 4
 \end{steps}
 \end{denserecipe}
 
-\begin{recipe}{Roasted Balsamic Beets}{\tag{V}\preheat{\celsius{190}}\totaltime{1 h 30 min}}
-\begin{ingredients}
-1 1/2 lb beets
-olive oil
-salt
-2 tbsp white balsamic vinegar
-\end{ingredients}
-\nextcolumn
-Serves 6
-\begin{steps}
-\item Wrap pairs of beets in foil with olive oil and salt
-\item Roast at \celsius{190} for 45-60 min
-\item Cool, peel, and cut into bite-size pieces
-\item Marinate with olive oil, salt, pepper, and white balsamic vinegar
-\end{steps}
-\end{recipe}
-
-\begin{recipe}{Crispy Herbed Goat Cheese}{\preheat{\celsius{250}}\totaltime{1 h 20 min}}
-\begin{ingredients}
-200 g panko bread crumbs
-550 g goat cheese
-1 tsp oregano
-3-4 tbsp fresh chives
-4 tbsp fresh thyme
-1/2 tsp black pepper
-3 eggs
-1 tbsp dijon mustard
-\end{ingredients}
-\nextcolumn
-Serves 6
-\begin{steps}
-\item Process breadcrumbs until fine
-\item Mix goat cheese, herbs, and pepper
-\item Form into 12 pucks and freeze 20 minutes
-\item Dip pucks in beaten egg and dijon, coat with panko, and freeze 20 minutes more \\(or until later use)
-\item Bake 7-10 minutes at \celsius{250} \\(11 minutes if fully frozen)
-\end{steps}
-\end{recipe}
-
 \begin{denserecipe}{Beet and Goat Cheese Salad}{\tag{V}\totaltime{15 min}}
 \begin{ingredients}
-6 servings \reciperef{Roasted Balsamic Beets}
-2 pucks \reciperef{Crispy Herbed Goat Cheese}
-1/2 cup \reciperef{Blonde Balsamic Vinaigrette}
-2 cups shaved fennel
-5 cups chopped frisee, escarole, lettuces
+\reciperef{Roasted Balsamic Beets}
+4 pucks \reciperef{Crispy Herbed Goat Cheese}
+1/4 cup \reciperef{Blonde Balsamic Vinaigrette}
+3 cups chopped frisee, escarole, lettuces
+1 cup shaved fennel
 dill fronds
 kosher salt
 chopped pistachios
 \end{ingredients}
 \nextcolumn
-Serves 6
+Serves 2
 \begin{steps}
 \item Toss greens, fennel, dill, and vinaigrette
 \item Add salt and pistachios
