--- a/sauces_and_marinades.tex
+++ b/sauces_and_marinades.tex
@@ -96,7 +96,7 @@ Keep the sauce warm in the double boiler, whisking occasionally, until ready to 
 2 cloves garlic, smashed
 1 small shallot, chopped
 2 tbsp soy sauce
-2 tbsp white wine vinegar
+2 tbsp white wine \ibreak vinegar
 2 tbsp balsamic
 1 tbsp miso paste
 1 tbsp brown sugar
@@ -147,7 +147,7 @@ Replace fish sauce with 2 anchovy fillets.
 3 tbsp butter
 1/4 cup flour
 2 cups milk
-2 cups shredded \hphantom{split} cheddar
+2 cups shredded \ibreak cheddar
 white pepper
 nutmeg
 cayenne
@@ -243,7 +243,7 @@ Makes 3/4 cup
 Huacatay can be found jarred. If unavailable, increase the cilantro to 5 tbsp.
 \end{recipe}
 
-\begin{recipe}{Warm Tomato-Ginger Vinaigrette}{\tag{V}\totaltime{20 min}}
+\begin{recipe}{Warm Tomato Vinaigrette}{\tag{V}\totaltime{20 min}}
 \begin{ingredients}
 2+2 tbsp olive oil
 1 shallot, minced
