--- a/soups_and_stews.tex
+++ b/soups_and_stews.tex
@@ -182,7 +182,7 @@ Serve with sliced chives or scallions.
 salt, olive oil
 aromatics, such as garlic, onion, celery, carrot
 herbs, such as thyme, sage, oregano, rosemary, bay leaves
-meat, such as cured sausage, smoked pork, or a Parmesan rind
+meat, such as cured \ibreak sausage, smoked pork, or a Parmesan rind
 fresh herbs, celery leaves, red pepper, scallion, red onion, flaky salt
 \end{ingredients}
 \nextcolumn
@@ -204,7 +204,7 @@ Serves 8
 \begin{recipe}{Pressure Cooker Black Beans}{\totaltime{60 min}}
 \begin{ingredients}
 1 tbsp oil
-2-3 chorizos or other cured sausages, chopped
+2-3 chorizos or other cured sausages, \ibreak chopped
 1 lb dried black beans
 1 onion, split in half
 6 cloves garlic
