--- a/vegetables_and_sides.tex
+++ b/vegetables_and_sides.tex
@@ -178,7 +178,7 @@ Serves 4
 salt and pepper
 1/4 cup chopped walnuts
 3 tbsp pomegranate seeds
-1 tsp pomegranate molasses
+1 tsp pomegranate \ibreak molasses
 flaky salt
 \end{ingredients}
 \nextcolumn
@@ -241,7 +241,7 @@ Serve warm or at room temperature.
 5 tbsp olive oil
 1 tbsp lemon juice
 salt and pepper
-1/4 cup grated\hphantom{skip} pecorino
+1/4 cup grated \ibreak pecorino
 \end{ingredients}
 \nextcolumn
 Serves 4
@@ -311,3 +311,20 @@ Serves 4 to 6
     \item Stir in parsley and drizzle with remaining oil
 \end{steps}
 \end{denserecipe}
+
+\begin{recipe}{Roasted Balsamic Beets}{\tag{V}\preheat{\celsius{190}}\totaltime{1 h 30 min}}
+\begin{ingredients}
+1 1/2 lb beets
+olive oil
+salt
+2 tbsp white balsamic vinegar
+\end{ingredients}
+\nextcolumn
+Serves 6
+\begin{steps}
+\item Wrap pairs of beets in foil with olive oil and salt
+\item Roast at \celsius{190} for 45-60 min
+\item Cool, peel, and cut into bite-size pieces
+\item Marinate with olive oil, salt, pepper, and white balsamic vinegar
+\end{steps}
+\end{recipe}
