--- a/casseroles_and_savory_pies.tex
+++ b/casseroles_and_savory_pies.tex
@@ -33,7 +33,7 @@ Makes 6 small pies
 \reciperef{Simple Pie Crust}
 500 g ripe heirloom tomatoes
 1/4 cup pesto
-3/4 cup mozzarella, shredded
+3/4 cup mozzarella, \ibreak shredded
 2 tbsp fresh basil and oregano, finely chopped
 3 large eggs
 1/3 cup heavy cream
@@ -87,7 +87,7 @@ Serves 4 to 6
 
 \begin{denserecipe}{French Macaroni Casserole}{\totaltime{30 minutes}}
 \begin{ingredients}
-3 cups \reciperef{Mornay Sauce}
+3 cups \mbox{\reciperef{Mornay Sauce}}
 1 1/2 cups macaroni
 1 tbsp olive oil
 1 large onion
@@ -116,7 +116,7 @@ Serves 4
 
 \begin{recipe}{Onion, Gruyere and Tomato Tart}{\preheat{\celsius{180}}\totaltime{1 h}}
 \begin{ingredients}
-1 \reciperef{Vodka Pie Dough}
+\mbox{\reciperef{Vodka Pie Dough}}
 2 lb onions, caramelized
 110 g gruyere, grated
 450 g cherry tomatoes
@@ -134,7 +134,7 @@ Serves 6 to 8
 
 \begin{recipe}{French Onion Lentils and Farro}{\tag{V}\preheat{\celsius{190}}\totaltime{1 hr 15 min}}
 \begin{ingredients}
-\reciperef{Fast Caramelized Onions}, 2/3 portion
+2/3 batch \reciperef{Fast Caramelized Onions}
 2 cloves garlic, minced
 2 tbsp dry sherry
 1 1/2 cups farro
