--- a/pescatarian_mains.tex
+++ b/pescatarian_mains.tex
@@ -22,7 +22,7 @@ Serves 4
     \item Combine all ingredients
     \item Season to taste with salt and pepper
 \end{steps}
-Serve over rice drizzled with Soy Reduction
+Serve with \reciperef{Soy Reduction} over rice.
 \end{recipe}
 
 \begin{denserecipe}{Egg and Tomato}{\tag{V}\totaltime{15 min}}
@@ -100,10 +100,10 @@ salt and pepper
 old bay, for garnish
 \end{ingredients}
 \nextcolumn
-\lihead{Florentine}
+\lihead{Florentine}\hfill \raisebox{-0.3em}{\recipesecref{Creamed Spinach}}
 
 \begin{ingredients}
-2 tbsp \reciperef{Creamed Spinach}
+2 tbsp \reciperefplain{Creamed Spinach}
 nutmeg, for garnish
 \end{ingredients}
 
