--- a/soups_and_stews.tex
+++ b/soups_and_stews.tex
@@ -94,8 +94,8 @@ Serves 6 to 8
 \nextcolumn
 Serves 6
 \begin{steps}
-    \item Heat oil over medium high heat in dutch oven
-    \item Saute onion and red pepper until soft
+    \item Heat oil over medium-high heat in dutch oven
+    \item Saute onion and bell pepper with a big pinch of salt until soft
     \item Add turkey and garlic, breaking up the meat
     \item Continue cooking until meat is no longer pink
     \item Add remaining ingredients
