Protein Banana Bread

--- a/patisserie.tex
+++ b/patisserie.tex
@@ -233,3 +233,31 @@ Serves 8
 \end{steps}
 Serve with powdered sugar, rum whipped cream.
 \end{denserecipe}
+
+\begin{denserecipe}{Protein Banana Bread}{\tag{V}\preheat{\celsius{180}}\totaltime{2 h}}
+\begin{ingredients}
+1 1/2 cups bananas
+1 1/2 cups greek yogurt
+1/4 cup applesauce
+3 tbsp honey
+3 eggs
+1 1/2 tsp vanilla extract
+1 1/2 cups w.w. flour
+1 1/2 cups \mbox{protein powder}
+2 1/4 tsp baking powder
+3/4 tsp baking soda
+1/2 tsp salt
+1 1/2 tsp cinnamon
+\end{ingredients}
+\nextcolumn
+Makes one large loaf
+\begin{steps}
+    \item Mash bananas and whish together with yogurt, applesauce, honey, eggs and vanilla extract
+    \item Combine dry ingredients and add to wet
+    \item Stir until just combined
+    \item Fold in any mix-ins
+    \item Bake in loaf pan at \celsius{180} for 50--60 minutes
+    \item Cool in a pan for 10 minutes, then on a wire rack until completely cool
+\end{steps}
+Mix-ins: walnuts, chocolate chips, blueberries
+\end{denserecipe}
