--- a/desserts.tex
+++ b/desserts.tex
@@ -115,3 +115,61 @@ Serves 2
     \item Refrigerate until wobbly, about 2 hours
 \end{steps}
 \end{denserecipe}
+
+\begin{recipe}[Under development]{Italian Meringue}{\tag{V}\totaltime{20 min}}
+\begin{ingredients}
+100-180 g sugar, less for softer meringue
+enough water to moisten sugar
+3 egg whites
+a few drops of lemon juice or vinegar
+\end{ingredients}
+\nextcolumn
+Makes 2 cups
+\begin{steps}
+    \item Bring sugar and water to boil, stirring over high heat; continue cooking without stirring until \celsius{116}, brushing down sides
+    \item Meanwhile whip egg whites and acid on medium to soft peaks
+    \item Slowly pour syrup into meringue while whipping on medium
+    \item Whip on high to desired stiffness
+\end{steps}
+\end{recipe}
+
+\begin{recipe}[Under development]{Zabaglione}{\tag{V}\totaltime{30 min}}
+\begin{ingredients}
+3 egg yolks
+40 g sugar
+1/2 dl marsala or other sweet wine
+pinch of salt
+lemon juice, to taste
+\end{ingredients}
+\nextcolumn
+Makes 1 cup
+\begin{steps}
+    \item Whisk yolks and sugar until smooth
+    \item Add wine and salt
+    \item Cook in double boiler whisking constantly until foam thickens and holds shape for 8 seconds, 5--8 minutes
+    \item Continue whisking off heat until desired serving temperature
+    \item Season with lemon juice 1/2 tsp at a time
+\end{steps}
+\end{recipe}
+
+\begin{recipe}[Under development]{Semifreddo}{\tag{V}\totaltime{9 h}}
+\begin{ingredients}
+2 cups \reciperef{Italian Meringue}
+1 cup \reciperef{Zabaglione}
+1 cup heavy cream
+1 tbsp powdered sugar
+1/8 tsp salt
+1 tsp vanilla or other extract
+1/2 cup grated chocolate, meringues, etc.
+1/3 cup curd or puree
+\end{ingredients}
+\nextcolumn
+Serves 8
+\begin{steps}
+    \item Whip cream, sugar and salt to soft peaks
+    \item Fold extracts and \reciperefplain{Italian Meringue} into \reciperefplain{Zabaglione}, followed by whipped cream 
+    \item Grate or crumble and fold in mix-ins
+    \item Layer into lined pan with curd, puree and/or additional mix-ins
+    \item Freeze overnight
+\end{steps}
+\end{recipe}
