--- a/casseroles_and_savory_pies.tex
+++ b/casseroles_and_savory_pies.tex
@@ -155,3 +155,29 @@ Serves 6--8
 \end{steps}
 Add broth while baking if it looks dry.
 \end{recipe}
+
+\begin{denserecipe}{Korean Chicken and Vermicelli}{\preheat{\celsius{220}}\totaltime{2 h}}
+\begin{ingredients}
+\reciperef{Gochujang-Ketchup Marinade}
+6 skinless boneless chicken thighs
+1 tsp + 2 tbsp sesame oil
+8 oz vermicelli
+2 cups hen of the woods
+1/2 cup sliced chilies
+1 cup sliced green onions
+1 1/4 cups chicken broth
+1/4 cup rice vinegar
+2 tbsp \mbox{toasted sesame seeds}
+\end{ingredients}
+\nextcolumn
+Serves 6
+\begin{steps}
+    \item Marinate chicken thighs for 1 to 8 hours
+    \item Grease 9x13-inch dish with 1 tsp sesame oil
+    \item Add vermicelli, pulling apart to cover bottom
+    \item Scatter mushrooms, peppers and half of green onions; top with chicken smooth side up, extra marinade and a few more green onions
+    \item Rinse marinade bowl with broth and pour in
+    \item Bake at \celsius{220} for 30 to 35 minutes until \celsius{75}
+    \item Remove chicken; toss noodles and veggies with vinegar and 2 tbsp sesame oil; plate and garnish with sesame seeds and green onions
+\end{steps}
+\end{denserecipe}
