--- a/joulu.tex
+++ b/joulu.tex
@@ -213,3 +213,24 @@ Other spices to try: nutmeg vanilla allspice pink\ijoin{}peppercorns bay\ijoin{}
     \item Cover with cloth and set in refrigerator under a light weight for 6 to 12 hours
 \end{steps}
 \end{recipe}
+
+\begin{recipe}{Mustard}{\tag{V}\totaltime{20 min}}
+\begin{ingredients}
+100 g mustard powder
+1 dl sugar
+1 tsp salt
+2 dl cream
+1 tbsp oil
+1 egg
+1 tbsp white wine \ibreak vinegar
+\end{ingredients}
+\nextcolumn
+Makes 3 dl
+\begin{steps}
+    \item Whisk together mustard powder, sugar and salt
+    \item Whisk in cream, oil and egg
+    \item Bring to boil, scraping bottom to prevent burning
+    \item Let boil for a moment until mixture thickens
+    \item Add vinegar
+\end{steps}
+\end{recipe}
