--- a/pescatarian_mains.tex
+++ b/pescatarian_mains.tex
@@ -296,3 +296,27 @@ Serves 6
 \item Bake 7-10 minutes at \celsius{250} \\(11 minutes if fully frozen)
 \end{steps}
 \end{recipe}
+
+\begin{recipe}{Crispy Halloumi and Beans}{\tag{V}\preheat{Broiler}\totaltime{30 min}}
+\begin{ingredients}
+olive oil
+1 lb cherry tomatoes
+2 cloves garlic, minced
+1 tbsp chopped parsley
+1 tsp honey
+1/2 tsp oregano or thyme
+15 oz can white beans
+salt and pepper
+8 oz halloumi, sliced
+1/2 lemon
+\end{ingredients}
+\nextcolumn
+Serves
+\begin{steps}
+    \item Cook tomatoes, garlic, parsley, honey and oregano in 2 tbsp olive oil over medium heat until tomatoes soften, 10 minutes
+    \item Add drained beans and cook 3 minutes
+    \item Season to taste with salt and pepper
+    \item Top with halloumi and broil until crispy, about 5 minutes
+    \item Squeeze lemon over the pan and drizzle with more honey and olive oil
+\end{steps}
+\end{recipe}
