--- a/salads_and_cold_preparations.tex
+++ b/salads_and_cold_preparations.tex
@@ -360,3 +360,29 @@ Serves
     \item  Season to taste, plate and garnish
 \end{steps}
 \end{recipe}
+
+\begin{recipe}{Tzatziki Chickpea Salad}{\tag{V}\totaltime{15 min}}
+\begin{ingredients}
+1 cup greek yogurt
+1 clove garlic, grated
+2 tbsp olive oil
+2 tsp honey
+1 lemon, juiced
+salt and pepper
+1 lb persian cucumbers
+2 15-oz cans chickpeas
+1/4 cup dill
+1/4 cup mint
+2 scallions
+\end{ingredients}
+\nextcolumn
+Serves 4
+\begin{steps}
+    \item Whisk together yogurt, garlic, olive oil, honey and lemon juice
+    \item Season well with salt and pepper
+    \item Cut cucumbers into half moons, drain chickpeas, chop herbs and slice scallions
+    \item Add dressing and toss to combine
+    \item Check for seasoning
+    \item Drizzle with more olive oil
+\end{steps}
+\end{recipe}
