--- a/sauces_and_marinades.tex
+++ b/sauces_and_marinades.tex
@@ -301,3 +301,24 @@ Makes 1/2 cup
     \item Add everything into a squeeze bottle and shake to combine
 \end{steps}
 \end{recipe}
+
+\begin{recipe}{Gochujang-Ketchup Marinade}{\tag{VG}\totaltime{5 min}}
+\begin{ingredients}
+1 tbsp minced ginger
+4 cloves garlic, minced
+1/4 cup rice vinegar
+2 tbsp soy sauce
+1 tsp kosher salt
+1 tbsp brown sugar
+1/4 cup ketchup
+1 tsp sesame oil
+2 tbsp gochujang
+\end{ingredients}
+\nextcolumn
+Makes 1 cup
+\begin{steps}
+    \item Mix ginger, garlic and vinegar
+    \item Wait 30 seconds to let the acid denature a protease in the ginger
+    \item Mix in remaining ingredients
+\end{steps}
+\end{recipe}
