CI and recipe fixes

--- a/pescatarian_mains.tex
+++ b/pescatarian_mains.tex
@@ -297,7 +297,7 @@ Serves 6
 \end{steps}
 \end{recipe}
 
-\begin{recipe}{Crispy Halloumi and Beans}{\tag{V}\preheat{Broiler}\totaltime{30 min}}
+\begin{recipe}{Crispy Halloumi and Beans}{\tag{V}\totaltime{30 min}}
 \begin{ingredients}
 olive oil
 1 lb cherry tomatoes
