--- a/vegetables_and_sides.tex
+++ b/vegetables_and_sides.tex
@@ -18,9 +18,9 @@ Serves 6
 \begin{steps}
     \item Preheat oven to \celsius{225}
     \item Scrub potatoes and split large ones
-    \item Roast butter, herbs and spices for 5 min
-    \item Toss potatoes to coat and roast for 30 min
-    \item Add olives and cream and roast for 10 min
+    \item Roast butter, herbs and spices for 5~min
+    \item Toss potatoes to coat and roast for 30~min
+    \item Add olives and cream and roast for 10~min
 \end{steps}
 \end{recipe}
 
