Recipes and fixes

--- a/meat_and_poultry_mains.tex
+++ b/meat_and_poultry_mains.tex
@@ -358,3 +358,28 @@ Serves 8
     \item Plate chicken and onions, reduce drippings by half, skim the fat, and spoon over chicken
 \end{steps}
 \end{denserecipe}
+
+\begin{recipe}{Juicy Taco Chicken}{\totaltime{30 min}}
+\begin{ingredients}
+1 1/2 lb boneless, skinless chicken thighs
+3 cloves garlic, crushed
+1 lime, juiced
+1 tbsp vinegary hot sauce, e.g. Crystal
+1 tsp onion powder
+2+2 tbsp neutral oil
+1 tsp kosher salt
+1/2 tsp black pepper
+1/2 cup water or beer
+\end{ingredients}
+\nextcolumn
+Serves 4
+\begin{steps}
+    \item Toss chicken, garlic, lime juice, hot sauce, onion powder, 2 tbsp oil, salt and pepper
+    \item Brown chicken in 2 tbsp oil
+    \item Transfer chicken to cutting board and deglaze pan with water or beer
+    \item Chop chicken and return to skillet
+    \item Cook for 3 minutes, stirring to coat
+\end{steps}
+Serve with tortillas, white onion and cilantro.
+\end{recipe}
+
