--- a/pasta_and_noodles.tex
+++ b/pasta_and_noodles.tex
@@ -145,3 +145,29 @@ Serves 4
     \item Plate and crumble feta on top
 \end{steps}
 \end{denserecipe}
+
+\begin{denserecipe}{Porcini Ragù}{\tag{V}\totaltime{45 min}}
+\begin{ingredients}
+40 g dried porcinies
+boiling water
+salt and black pepper
+1/4 cup olive oil
+3 cloves garlic, crushed
+1/2 tsp red pepper flakes
+1/2 cup minced parsley stems and leaves
+1 1/2 tbsp tomato paste
+250 g tagliatelle
+3 tbsp cream
+40 g parmesan, grated
+\end{ingredients}
+\nextcolumn
+Serves 4
+\begin{steps}
+    \item Soak mushrooms for 10 minutes; drain reserving liquid; chop to consistency of ground beef
+    \item Heat oil, garlic, red pepper, parsley and 1/4~tsp salt on medium-low until garlic is lightly golden
+    \item Add mushrooms, tomato paste and 1 tsp black pepper; stir fry for 3 minutes; set aside
+    \item Boil pasta; drain reserving 1 1/2 cups water
+    \item Add water and 5 tbsp porcini tea to mushrooms; bring to boil; simmer for 3 minutes
+    \item Add pasta and finish with cream and parmesan
+\end{steps}
+\end{denserecipe}
