--- a/soups_and_stews.tex
+++ b/soups_and_stews.tex
@@ -311,3 +311,29 @@ Serves 6
     \item Check for seasoning
 \end{steps}
 \end{denserecipe}
+
+\begin{denserecipe}{Chicken and Red Lentil Soup}{\tag{V}\totaltime{1 h}}
+\begin{ingredients}
+3 tbsp olive oil
+2 large onions, sliced
+6 garlic cloves, sliced
+1 lb boneless, skinless chicken thighs
+1 1/2 cups red lentils
+1 tsp turmeric
+salt and pepper
+1 cup mix of chopped parsley, dill and mint
+1 cup yogurt
+2 tbsp lemon juice
+\end{ingredients}
+\nextcolumn
+Serves 4
+\begin{steps}
+    \item Cook onions in oil over medium-high heat until slightly charred; add garlic and cook briefly
+    \item Add chicken, lentils and turmeric; season with salt and pepper; toss to combine
+    \item Add 8 cups water and bring to a boil
+    \item Simmer until lentils break down, 25 minutes
+    \item Remove chicken, cool slightly, shred and return
+    \item Add herbs and adjust for seasoning
+\end{steps}
+Top servings with yogurt seasoned with lemon juice and a pinch of salt.
+\end{denserecipe}
