--- a/casseroles_and_savory_pies.tex
+++ b/casseroles_and_savory_pies.tex
@@ -1,6 +1,6 @@
 \BeginCategoryTOC{Casseroles \& Savory Pies}
 
-\begin{denserecipe}{Freeze \& Bake Chicken Pot Pies}{\preheat{\celsius{400}}\totaltime{1 h 30 min}}
+\begin{denserecipe}{Freeze \& Bake Chicken Pot Pies}{\preheat{\celsius{200}}\totaltime{1 h 30 min}}
 \begin{ingredients}
 1/3 cup butter
 1 onion, diced
@@ -24,7 +24,7 @@ Makes 6 small pies
     \item Add shredded chicken, peas, salt, and pepper
     \item Line pie dishes with pie crust, fill with the cooled filling and top with more crust
     \item Seal edges, cut 4 slits and freeze in foil
-    \item Thaw frozen pies in foil for 30 min at \celsius{400}, then bake for 35 min uncovered
+    \item Thaw frozen pies in foil for 30 min at \celsius{200}, then bake for 35 min uncovered
 \end{steps}
 \end{denserecipe}
 
@@ -179,5 +179,31 @@ Serves 6
     \item Rinse marinade bowl with broth and pour in
     \item Bake at \celsius{220} for 30 to 35 minutes until \celsius{75}
     \item Remove chicken; toss noodles and veggies with vinegar and 2 tbsp sesame oil; plate and garnish with sesame seeds and green onions
+\end{steps}
+\end{denserecipe}
+
+\begin{denserecipe}{Roman Chicken with Potatoes}{\preheat{\celsius{220}}\totaltime{1 h}}
+\begin{ingredients}
+2 lb chicken thighs
+kosher salt
+3 tbsp olive oil
+1 lb waxy potatoes
+1 tbsp fresh rosemary
+4 anchovy fillets
+2 cloves garlic
+2 tbsp capers
+3/4 cup white wine
+3 tbsp wine vinegar
+2 tbsp chopped parsley
+\end{ingredients}
+\nextcolumn
+Serves 4
+\begin{steps}
+    \item Salt chicken and brown skin side in 1 tbsp oil from cold over medium heat, 15 minutes
+    \item Cut potatoes into chunks; chop rosemary and anchovies; smash garlic; toss all with 2 tbsp oil, capers and 1/2 tsp salt
+    \item Flip chicken and tuck in potato mixture
+    \item Add wine; roast until tender, 25 minutes
+    \item Remove chicken; add vinegar and 2 tbsp water; cook and stir occasionally until thickened, 5~minutes, adding water as needed to emulsify
+    \item Check seasoning, return chicken and sprinkle with parsley
 \end{steps}
 \end{denserecipe}
