Initial app version

--- a/main.tex
+++ b/main.tex
@@ -25,6 +25,7 @@
 \usepackage{pgfkeys}
 \usepackage{calc}
 \usepackage{accents}
+\usepackage{xstring}
 
 \hyphenation{car-a-mel-ized}
 
@@ -91,11 +92,97 @@
 \setlength{\columnsep}{0.2in}
 
 \newcommand{\CategoryName}{}
+\newcommand{\CategorySlug}{}
 
 \newcounter{recipecategory}
 \renewcommand{\therecipecategory}{\arabic{recipecategory}}
 \newcounter{cardsection}[recipecategory]
 \renewcommand{\thecardsection}{\therecipecategory}
+
+\makeatletter
+
+\newcommand{\HtmlSanitizeLimited}[1]{%
+  % Block 1 (accents, HTML, ligatures)
+  \StrSubstitute{#1}{&}{\string&\string;amp;}[\tmpA]%
+  \StrSubstitute{\tmpA}{<}{\string&\string;lt;}[\tmpB]%
+  \StrSubstitute{\tmpB}{>}{\string&\string;gt;}[\tmpC]%
+  \StrSubstitute{\tmpC}{"}{\string&\string;quot;}[\tmpD]%
+  \StrSubstitute{\tmpD}{'}{\string&\string;apos;}[\tmpE]%
+  \StrSubstitute{\tmpE}{á}{\string&\string;aacute;}[\tmpF]%
+  \StrSubstitute{\tmpF}{à}{\string&\string;agrave;}[\tmpG]%
+  \StrSubstitute{\tmpG}{ä}{\string&\string;auml;}[\tmpH]%
+  \StrSubstitute{\tmpH}{â}{\string&\string;acirc;}[\tmpI]%
+  % Block 2
+  \StrSubstitute{\tmpI}{ã}{\string&\string;atilde;}[\tmpA]%
+  \StrSubstitute{\tmpA}{å}{\string&\string;aring;}[\tmpB]%
+  \StrSubstitute{\tmpB}{ç}{\string&\string;ccedil;}[\tmpC]%
+  \StrSubstitute{\tmpC}{é}{\string&\string;eacute;}[\tmpD]%
+  \StrSubstitute{\tmpD}{è}{\string&\string;egrave;}[\tmpE]%
+  \StrSubstitute{\tmpE}{ë}{\string&\string;euml;}[\tmpF]%
+  \StrSubstitute{\tmpF}{ê}{\string&\string;ecirc;}[\tmpG]%
+  \StrSubstitute{\tmpG}{í}{\string&\string;iacute;}[\tmpH]%
+  \StrSubstitute{\tmpH}{ì}{\string&\string;igrave;}[\tmpI]%
+  % Block 3
+  \StrSubstitute{\tmpI}{ï}{\string&\string;iuml;}[\tmpA]%
+  \StrSubstitute{\tmpA}{î}{\string&\string;icirc;}[\tmpB]%
+  \StrSubstitute{\tmpB}{ñ}{\string&\string;ntilde;}[\tmpC]%
+  \StrSubstitute{\tmpC}{ó}{\string&\string;oacute;}[\tmpD]%
+  \StrSubstitute{\tmpD}{ò}{\string&\string;ograve;}[\tmpE]%
+  \StrSubstitute{\tmpE}{ö}{\string&\string;ouml;}[\tmpF]%
+  \StrSubstitute{\tmpF}{ô}{\string&\string;ocirc;}[\tmpG]%
+  \StrSubstitute{\tmpG}{õ}{\string&\string;otilde;}[\tmpH]%
+  \StrSubstitute{\tmpH}{ø}{\string&\string;oslash;}[\tmpI]%
+  % Block 4
+  \StrSubstitute{\tmpI}{ú}{\string&\string;uacute;}[\tmpA]%
+  \StrSubstitute{\tmpA}{ù}{\string&\string;ugrave;}[\tmpB]%
+  \StrSubstitute{\tmpB}{ü}{\string&\string;uuml;}[\tmpC]%
+  \StrSubstitute{\tmpC}{û}{\string&\string;ucirc;}[\tmpD]%
+  \StrSubstitute{\tmpD}{ý}{\string&\string;yacute;}[\tmpE]%
+  \StrSubstitute{\tmpE}{ÿ}{\string&\string;yuml;}[\tmpF]%
+  \StrSubstitute{\tmpF}{œ}{\string&\string;oe;}[\tmpG]%
+  \StrSubstitute{\tmpG}{š}{\string&\string;scaron;}[\tmpH]%
+  \StrSubstitute{\tmpH}{ž}{\string&\string;zcaron;}[\tmpI]%
+  % Block 5 (uppercase, ligatures, etc)
+  \StrSubstitute{\tmpI}{ß}{\string&\string;szlig;}[\tmpA]%
+  \StrSubstitute{\tmpA}{Á}{\string&\string;Aacute;}[\tmpB]%
+  \StrSubstitute{\tmpB}{À}{\string&\string;Agrave;}[\tmpC]%
+  \StrSubstitute{\tmpC}{Ä}{\string&\string;Auml;}[\tmpD]%
+  \StrSubstitute{\tmpD}{Â}{\string&\string;Acirc;}[\tmpE]%
+  \StrSubstitute{\tmpE}{Ã}{\string&\string;Atilde;}[\tmpF]%
+  \StrSubstitute{\tmpF}{Å}{\string&\string;Aring;}[\tmpG]%
+  \StrSubstitute{\tmpG}{Ç}{\string&\string;Ccedil;}[\tmpH]%
+  \StrSubstitute{\tmpH}{É}{\string&\string;Eacute;}[\tmpI]%
+  % Block 6
+  \StrSubstitute{\tmpI}{È}{\string&\string;Egrave;}[\tmpA]%
+  \StrSubstitute{\tmpA}{Ë}{\string&\string;Euml;}[\tmpB]%
+  \StrSubstitute{\tmpB}{Ê}{\string&\string;Ecirc;}[\tmpC]%
+  \StrSubstitute{\tmpC}{Í}{\string&\string;Iacute;}[\tmpD]%
+  \StrSubstitute{\tmpD}{Ì}{\string&\string;Igrave;}[\tmpE]%
+  \StrSubstitute{\tmpE}{Ï}{\string&\string;Iuml;}[\tmpF]%
+  \StrSubstitute{\tmpF}{Î}{\string&\string;Icirc;}[\tmpG]%
+  \StrSubstitute{\tmpG}{Ñ}{\string&\string;Ntilde;}[\tmpH]%
+  \StrSubstitute{\tmpH}{Ó}{\string&\string;Oacute;}[\tmpI]%
+  % Block 7
+  \StrSubstitute{\tmpI}{Ò}{\string&\string;Ograve;}[\tmpA]%
+  \StrSubstitute{\tmpA}{Ö}{\string&\string;Ouml;}[\tmpB]%
+  \StrSubstitute{\tmpB}{Ô}{\string&\string;Ocirc;}[\tmpC]%
+  \StrSubstitute{\tmpC}{Õ}{\string&\string;Otilde;}[\tmpD]%
+  \StrSubstitute{\tmpD}{Ø}{\string&\string;Oslash;}[\tmpE]%
+  \StrSubstitute{\tmpE}{Ú}{\string&\string;Uacute;}[\tmpF]%
+  \StrSubstitute{\tmpF}{Ù}{\string&\string;Ugrave;}[\tmpG]%
+  \StrSubstitute{\tmpG}{Ü}{\string&\string;Uuml;}[\tmpH]%
+  \StrSubstitute{\tmpH}{Û}{\string&\string;Ucirc;}[\tmpI]%
+  % Block 8
+  \StrSubstitute{\tmpI}{Ý}{\string&\string;Yacute;}[\tmpA]%
+  \StrSubstitute{\tmpA}{Ÿ}{\string&\string;Yuml;}[\tmpB]%
+  \StrSubstitute{\tmpB}{Œ}{\string&\string;OElig;}[\tmpC]%
+  \StrSubstitute{\tmpC}{Š}{\string&\string;Scaron;}[\tmpD]%
+  \StrSubstitute{\tmpD}{Ž}{\string&\string;Zcaron;}[\tmpE]%
+  \StrSubstitute{\tmpE}{Æ}{\string&\string;AElig;}[\tmpH]%
+  \StrSubstitute{\tmpH}{Ø}{\string&\string;Oslash;}[\htmlsafe]%
+}
+\makeatother
+
 
 \newcommand{\RemoveAccents}[1]{%
   \StrSubstitute{#1}{ö}{o}[\tmpa]%
@@ -114,7 +201,15 @@
   \StrSubstitute{\tmpm}{Ó}{O}[\tmpn]%
   \StrSubstitute{\tmpn}{ñ}{n}[\tmpo]%
   \StrSubstitute{\tmpo}{Ñ}{N}[\tmpp]%
-  \StrSubstitute{\tmpo}{ù}{u}[\tmpq]%
+  \StrSubstitute{\tmpp}{ù}{u}[\tmpremoveaccents]%
+}
+
+\newcommand{\SanitizeSlug}[1]{%
+  \RemoveAccents{#1}%
+  \StrSubstitute{\tmpremoveaccents}{\&}{and}[\tmpA]%
+  \StrSubstitute{\tmpA}{ }{_}[\tmpB]%
+  \StrSubstitute{\tmpB}{,}{}[\tmpC]%
+  \StrSubstitute{\tmpC}{-}{_}[\slug]%
 }
 
 \newwrite\slugfile
@@ -127,14 +222,11 @@
     \addcontentsline{toc}{subsection}{#2}%
     \begin{textblock*}{\paperwidth-0.1in}(0.1in,0mm)\footnotesize #1\end{textblock*}
     \begin{textblock*}{\paperwidth-0.1in}(0mm,0mm)\raggedleft  \footnotesize \therecipecategory{}\enspace\CategoryName{}\end{textblock*}
-    \StrSubstitute{#2}{ }{-}[\safeA]
-    \StrDel{\safeA}{,}[\safeB]
-    \StrDel{\safeB}{'}[\safeC]
-    \StrSubstitute{\safeC}{\&}{and}[\safe]
-    \RemoveAccents{\safe}
-    \edef\sanitizedRecipeName{\tmpq}
-    \immediate\write\slugfile{\thepage:\sanitizedRecipeName}
-    \hypertarget{\safe}{}%
+    \SanitizeSlug{#2}
+    \edef\sanitizedRecipeName{\slug}
+    \HtmlSanitizeLimited{\CategoryName}
+    \immediate\write\slugfile{\thepage:\htmlsafe:\sanitizedRecipeName}
+    \hypertarget{\slug}{}%
     \label{card:\sanitizedRecipeName}%
     \begin{FlushLeft}
     \textrm{{\large\href{https://olli.saarikivi.fi/card/\sanitizedRecipeName.jpg}{#2}}\hfill{\large\tabularnums{#3}}}
@@ -175,14 +267,10 @@
     {\begin{enumerate}[leftmargin=*,topsep=0pt,itemsep=0pt]}
     {\end{enumerate}}
 \newcommand{\reciperefcore}[3]{%
-    \StrSubstitute{#1}{ }{-}[\safeA]%
-    \StrDel{\safeA}{,}[\safeB]%
-    \StrDel{\safeB}{'}[\safeC]%
-    \StrSubstitute{\safeC}{\&}{and}[\safe]%
-    \RemoveAccents{\safe}%
-    \edef\sanitizedRef{\tmpj}%
+    \SanitizeSlug{#1}
+    \edef\sanitizedRef{\slug}%
     \ifnum#3=1
-        \hyperlink{\safe}{#1}%
+        \hyperlink{\slug}{#1}%
     \fi
     \ifnum#2=1
       \,\allowbreak(\S\ref{card:\sanitizedRef})%
@@ -205,6 +293,8 @@
   \phantomsection
   \addcontentsline{toc}{section}{\therecipecategory~#1}%
   \renewcommand{\CategoryName}{#1}%
+  \SanitizeSlug{#1}%
+  \edef\CategorySlug{\slug}%
 }
 \makeatother
 
