--- a/main.tex
+++ b/main.tex
@@ -14,7 +14,7 @@
 \usepackage{booktabs}
 \usepackage{soul}
 \usepackage{color}
-\usepackage{hyperref}
+\usepackage[breaklinks,hidelinks]{hyperref}
 \usepackage{hyphenat}
 \usepackage{multicol}
 \usepackage{microtype}
@@ -33,8 +33,6 @@
 \textblockorigin{0pt}{\paperheight-0.18in}
 
 \hyphenation{slight-ly car-da-mom crush-ed}
-
-\hypersetup{hidelinks}
 
 \makeatletter
 \newcommand*{\shifttext}[2]{%
@@ -304,8 +302,8 @@
 
 \newcommand{\tag}[1]{\hspace{1em}#1}
 \newcommand{\symboltag}[2]{\tag{#1\hspace{0.3em}#2}}
-\newcommand{\totaltime}[1]{\symboltag{\raisebox{-0.09em}{\small\includegraphics[scale=0.07]{symbols/stopwatch.pdf}}}{#1}}
-\newcommand{\preheat}[1]{\symboltag{\raisebox{-0.09em}{\includegraphics[scale=0.09]{symbols/oven.pdf}}}{#1}}
+\newcommand{\totaltime}[1]{\symboltag{\raisebox{-0.09em}{\small\includegraphics[scale=0.07]{symbols/stopwatch.eps}}}{#1}}
+\newcommand{\preheat}[1]{\symboltag{\raisebox{-0.09em}{\includegraphics[scale=0.09]{symbols/oven.eps}}}{#1}}
 
 \newcommand{\ihead}[1]{\ful{#1}}
 \newcommand{\ijoin}{$\cdot{}$}
